--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,11 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
 />
+<link 
+  rel="stylesheet" 
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+/>
+
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
